# OJ-Slave

./: .gitignore  Dockerfile  Dockerfile.celery  deployment.yaml  docker-compose.yml  pyproject.toml  test.py
src/: __init__.py  celery_app.py  main.py  setting.py  utils.py
src/backend/: __init__.py  runners.py  task_manager.py
src/router/: __init__.py  runner.py
tasks/: docker.py
tests/: test_backen.py
